force-app/src/objects/cpm__Process_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Global_Target__c</fullName>
        <label>Global Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor_Class__c</fullName>
        <label>Processor Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Validator_Class__c</fullName>
        <label>Validator Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Process Setting</label>
</CustomObject>